# banan-os

./: .clangd  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENCE  README.md  bochs.sh  bos  build.sh  check-fs.sh  clean.sh  config.sh  disk.sh  image-full.sh  image.sh  install-usb.sh  iso.sh  linecount.sh  qemu.sh
BAN/: CMakeLists.txt  Makefile
BAN/BAN/: Assert.cpp  Memory.cpp  New.cpp  String.cpp  StringView.cpp  Time.cpp
BAN/arch/i386/: make.config
BAN/include/BAN/: Array.h  Assert.h  Atomic.h  Bitcast.h  ByteSpan.h  CircularQueue.h  Debug.h  Endianness.h  Errors.h  Formatter.h  ForwardList.h  Function.h  GUID.h  Hash.h  HashMap.h  HashSet.h  Heap.h  IPv4.h  Iteration.h  Iterators.h  Limits.h  LinkedList.h  MAC.h  MacroUtils.h  Math.h  Memory.h  Move.h  New.h  NoCopyMove.h  Numbers.h  Optional.h  PlacementNew.h  PriorityQueue.h  Queue.h  RefPtr.h  ScopeGuard.h  Sort.h  Span.h  String.h  StringView.h  (+8 more)
LibFont/: CMakeLists.txt  Font.cpp  PSF.cpp
LibFont/include/LibFont/: Font.h  PSF.h
LibGUI/: CMakeLists.txt  Window.cpp
LibGUI/include/LibGUI/: Window.h
LibInput/: CMakeLists.txt  KeyEvent.cpp
LibInput/include/LibInput/: KeyEvent.h  MouseEvent.h
bootloader/bios/: CMakeLists.txt  a20_line.S  boot.S  command_line.S  common.S  disk.S  elf.S  ext2.S  framebuffer.S  linker.ld  memory_map.S  utils.S
bootloader/installer/: CMakeLists.txt  ELF.cpp  ELF.h  GPT.cpp  GPT.h  GUID.cpp  GUID.h  build.sh  crc32.cpp  crc32.h  main.cpp
kernel/: .gitignore  CMakeLists.txt  Makefile  icxxabi.cpp  ubsan.cpp
kernel/arch/i386/: APIC.cpp  CPUID.cpp  GDT.cpp  GDT_asm.S  IDT.cpp  MMU.cpp  Paging.cpp  Panic.cpp  Signal.S  SpinLock.S  Syscall.S  TTY.cpp  Thread.S  VESA.cpp  boot.S  boot.s  crt0.S  font.c  linker.ld  make.config  tty.c  tty.cpp  vga.h
kernel/arch/i686/: PageTable.cpp  Signal.S  Syscall.S  Thread.S  (+6 more)
kernel/kernel/: ACPI.cpp  APIC.cpp  ATA.cpp  BootInfo.cpp  CPUID.cpp  Credentials.cpp  Debug.cpp  Device.cpp  DeviceManager.cpp  DiskIO.cpp  ELF.cpp  Epoll.cpp  Errors.cpp  Font.cpp  GDT.cpp  IDT.cpp  IDT_asm.S  Input.cpp  InterruptController.cpp  Interruptable.cpp  Keyboard.cpp  OpenFileDescriptorSet.cpp  PCI.cpp  PIC.cpp  PIT.cpp  PS2.cpp  Panic.cpp  Process.cpp  Processor.cpp  RTC.cpp  Random.cpp  SSP.cpp  Scheduler.cpp  Semaphore.cpp  Serial.cpp  Shell.cpp  Signal.cpp  SpinLock.cpp  Syscall.cpp  TTY.cpp  (+10 more)
kernel/klibc/: string.cpp
kernel/userspace/: userspace.cpp
libc/: CMakeLists.txt  Makefile  ctype.cpp  dirent.cpp  fcntl.cpp  grp.cpp  icxxabi.cpp  malloc.cpp  math.S  math.cpp  printf_impl.cpp  pwd.cpp  scanf_impl.cpp  signal.cpp  stdio.cpp  stdlib.cpp  string.cpp  termios.cpp  time.cpp  unistd.cpp
libc/arpa/: inet.cpp
libc/include/: assert.h  complex.h  cpio.h  ctype.h  dirent.h  dlfcn.h  errno.h  fcntl.h  fenv.h  fmtmsg.h  ftw.h  glob.h  inttypes.h  libgen.h  limits.h  locale.h  math.h  monetary.h  ndbm.h  netdb.h  nl_types.h  printf_impl.h  pwd.h  regex.h  scanf_impl.h  sched.h  search.h  setjmp.h  signal.h  spawn.h  stdint.h  stdio.h  stdlib.h  string.h  strings.h  stropts.h  tar.h  termios.h  tgmath.h  time.h  (+5 more)
libc/stdio/: printf.c  printf.cpp  putchar.c  putchar.cpp  puts.c
libc/stdlib/: abort.c  abort.cpp
libc/string/: memcmp.c  memcmp.cpp  memcpy.c  memcpy.cpp  memmove.c  memmove.cpp  memset.c  memset.cpp  strcmp.cpp  strcpy.c  strcpy.cpp  strerror.cpp  strlen.c  strncmp.cpp  strncpy.c  strncpy.cpp  strstr.cpp
libc/sys/: banan-os.cpp  mman.cpp  select.cpp  socket.cpp  stat.cpp  wait.cpp
userspace/: CMakeLists.txt  create_program.sh  test.c
userspace/Shell/: CMakeLists.txt  main.cpp
userspace/Terminal/: CMakeLists.txt  Terminal.cpp  main.cpp
userspace/WindowServer/: CMakeLists.txt  Cursor.h  Utils.h  Window.h  WindowServer.cpp  WindowServer.h  main.cpp
userspace/aoc2023/: CMakeLists.txt  init-day.sh
userspace/aoc2024/: CMakeLists.txt  init-day.sh
userspace/aoc2025/: CMakeLists.txt  init-day.sh
userspace/cat/: CMakeLists.txt  main.cpp
userspace/cat-mmap/: CMakeLists.txt  main.cpp
userspace/chmod/: CMakeLists.txt
userspace/cp/: CMakeLists.txt  main.cpp
userspace/dd/: CMakeLists.txt  main.cpp
userspace/dhcp-client/: CMakeLists.txt  main.cpp
userspace/echo/: CMakeLists.txt  main.cpp
userspace/getopt/: CMakeLists.txt
userspace/http-server/: CMakeLists.txt  HTTPServer.cpp  HTTPServer.h  main.cpp
userspace/id/: CMakeLists.txt  main.cpp
userspace/image/: CMakeLists.txt  Image.cpp  Image.h  Netbpm.cpp  Netbpm.h  main.cpp
userspace/init/: CMakeLists.txt  main.cpp
userspace/libraries/: CMakeLists.txt
userspace/loadfont/: CMakeLists.txt  main.cpp
userspace/loadkeys/: CMakeLists.txt  main.cpp
userspace/ls/: CMakeLists.txt  main.cpp
userspace/meminfo/: CMakeLists.txt  main.cpp
userspace/mkdir/: CMakeLists.txt  main.cpp
userspace/mmap-shared-test/: CMakeLists.txt  main.cpp
userspace/nslookup/: CMakeLists.txt  main.cpp
userspace/poweroff/: CMakeLists.txt  main.cpp
userspace/programs/: CMakeLists.txt  create_program.sh
userspace/resolver/: CMakeLists.txt  main.cpp
userspace/rm/: CMakeLists.txt  main.cpp
userspace/sleep/: CMakeLists.txt  main.cpp
userspace/snake/: CMakeLists.txt  main.cpp
userspace/stat/: CMakeLists.txt  main.cpp
userspace/sudo/: CMakeLists.txt  main.cpp
userspace/sync/: CMakeLists.txt  main.cpp
userspace/tee/: CMakeLists.txt  main.cpp
userspace/test/: CMakeLists.txt  test.cpp
userspace/test-framebuffer/: CMakeLists.txt  main.cpp
userspace/test-globals/: CMakeLists.txt
userspace/test-mmap-shared/: CMakeLists.txt
userspace/test-mouse/: CMakeLists.txt  main.cpp
userspace/test-popen/: CMakeLists.txt
userspace/test-sort/: CMakeLists.txt  main.cpp
userspace/test-tcp/: CMakeLists.txt  main.cpp
userspace/test-udp/: CMakeLists.txt
userspace/test-unix-socket/: CMakeLists.txt
userspace/test-window/: CMakeLists.txt  main.cpp
userspace/tests/: CMakeLists.txt
userspace/touch/: CMakeLists.txt  main.cpp
userspace/u8sum/: CMakeLists.txt  main.cpp
userspace/whoami/: CMakeLists.txt  main.cpp
userspace/yes/: CMakeLists.txt  main.cpp
(+1306 files in other folders)
